added a greeting and navbar, aplied some styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <a id="home-link-nav" href="#home">Home</a>
+        <a id="links-link-nav" href="#links">Links</a>
+        <a id="about-link-nav" href="#about">About</a>
+    </nav>
+    <section id="home">
+        <div id="greeting-container">
+            <label class="greeting" id="greeting1">Hello,</label>
+            <label class="greeting" id="greeting2">I am</label>
+            <label class="greeting" id="greeting3">The_Baum</label>
+            <label class="greeting" id="greeting4">I am a student learning</label>
+            <label class="greeting" id="greeting5"></label>
+        </div>
+    </section>
+    <script src="main.js"></script>
 </body>
 </html>
