changed font added scroll down button added light and dark mode

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The_Baums Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="init()">
     <nav>
         <a id="home-link-nav" href="#home">Home</a>
         <a id="links-link-nav" href="#links">Links</a>
         <a id="about-link-nav" href="#about">About</a>
+        <button id="togleLightmode" onclick="toggleLightmode()">
+            <ion-icon id="appearance" name="sunny"></ion-icon>
+        </button>
     </nav>
     <section id="home">
         <div id="greeting-container">
@@ -21,7 +27,15 @@
             <label class="greeting" id="greeting4">I am a student learning</label>
             <label class="greeting" id="greeting5"></label>
         </div>
+        <div id="scroll-down-greetings-container" class="scroll-down-container">
+            <a href="#links" id="scroll-down-greetings" class="scroll-down-button">Go Down</a>
+        </div>
+    </section>
+    <section id="links">
+
     </section>
     <script src="main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
