--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
         </div>
     </section>
     <section id="links">
-
+        <div id="social-links-container">
+            <a href="https://www.youtube.com/channel/UCvKre5GLBJHx5u3DgcW3Y_A" target="_blank">
+                <ion-icon name="logo-youtube" class="social-links"></ion-icon>
+            </a>
+            <a href="https://github.com/TheBaum123" target="_blank">
+                <ion-icon name="logo-github" class="social-links"></ion-icon>
+            </a>
+            <a href="https://twitter.com/the_baum123" target="_blank">
+                <ion-icon name="logo-twitter" class="social-links"></ion-icon>
+            </a>
+            
+        </div>
+        <div id="scroll-down-links-container" class="scroll-down-container">
+            <a href="#about" id="scroll-down-links" class="scroll-down-button">Go Down</a>
+        </div>
     </section>
     <script src="main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
