updated css, cookie prompt and positioning of remove user data prompt

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             <ion-icon id="appearance" name="sunny"></ion-icon>
         </button>
     </nav>
-    <section id="cookiePrompt">
-        <button id="enableCookies" onclick="enableCookies()">Enable cookies</button>
-        <button id="disableCookies" onclick="disableCookies()">Disable cookies</button>
-    </section>
+    <div id="cookiePrompt">
+        <label id="cookiePromptLabel">Accept the use of cookies?</label>
+        <button id="enableCookies" onclick="enableCookies()">Allow cookies</button>
+        <button id="disableCookies" onclick="disableCookies()">Deny cookies</button>
+    </div>
     <section id="home">
         <div id="greeting-container">
             <label class="greeting" id="greeting1">Hello,</label>
