changed remove data message

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </section>
     <section id="about">
         <label id="storedCookies"></label>
-        <button id="removeCookies" onclick="disableCookies()">Remove my stored Cookies</button>
+        <button id="removeCookies" onclick="disableCookies()">Remove my stored Data</button>
     </section>
     <script src="main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
