added github contrib graph

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             <a href="https://twitter.com/the_baum123" target="_blank">
                 <ion-icon name="logo-twitter" class="social-links"></ion-icon>
             </a>
-            
         </div>
+        <label id="gh-contribs-label">Github contribution graph:</label>
+        <img src="https://ghchart.rshah.org/C010B0/thebaum123" alt="The_Baum's Github chart" id="gh-contribs">
         <div id="scroll-down-links-container" class="scroll-down-container">
             <a href="#projects" id="scroll-down-links" class="scroll-down-button">Go Down</a>
         </div>
