made about section a grid

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
         </a>
     </section>
     <section id="about">
-        <label id="storedCookies"></label>
+        <div id="storedCookiesContainer">
+            <label id="storedCookies"></label>
+        </div>
         <button id="removeCookies" onclick="disableCookies()">Remove my stored Data</button>
     </section>
     <script src="main.js"></script>
