added a new project to the projects section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ion-icon name="logo-twitter" class="social-links"></ion-icon>
             </a>
         </div>
-        <label id="gh-contribs-label">Github contribution graph:</label>
+        <label id="gh-contribs-label">Github contributions:</label>
         <img src="https://ghchart.rshah.org/C010B0/thebaum123" alt="The_Baum's Github chart" id="gh-contribs">
         <div id="scroll-down-links-container" class="scroll-down-container">
             <a href="#projects" id="scroll-down-links" class="scroll-down-button">Go Down</a>
@@ -60,7 +60,6 @@
         <div class="timeline-dots" id="project-01-dot"></div>
         <div class="timeline-dots" id="project-02-dot"></div>
         <div class="timeline-dots" id="project-03-dot"></div>
-        <div class="timeline-dots" id="project-04-dot"></div>
         <a href="https://github.com/TheBaum123/rock-paper-scissors.py" class="project-link" id="project-01-link">
             <div class="project-container" id="project-01-container">
                 <div class="project-title" id="project-01-title">
@@ -98,6 +97,16 @@
                 </div>
                 <div class="poject-description" id="project-04-description">
                     <label class="project-description-label" id="project-04-description-label">The source of the webpage you are on right now</label>
+                </div>
+            </div>
+        </a>
+        <a href="https://github.com/TheBaum123/dip-switch-calculator" class="project-link" id="project-05-link">
+            <div class="project-container" id="project-05-container">
+                <div class="project-title" id="project-05-title">
+                    <label class="project-title-label" id="project-05-title-label">dip-switch calculator</label>
+                </div>
+                <div class="poject-description" id="project-05-description">
+                    <label class="project-description-label" id="project-05-description-label">Calculates the position of dip switches on dmx devices for an dmx address</label>
                 </div>
             </div>
         </a>
