added random chuck norris jokes for fun

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
             <a href="#projects" id="scroll-down-links" class="scroll-down-button">Go Down</a>
         </div>
     </section>
+    <section id="chuck-joke-section">
+        <div id="chuck-joke-container">
+            <label id="chuck-heading">Random Chuck Norris joke for funsies and learning how to make API Requests:</label>
+            <br>
+            <label id="chuck-joke"></label>
+        </div>
+    </section>
     <section id="projects">
         <div id="projects-timeline"></div>
         <div class="timeline-dots" id="project-01-dot"></div>
