can choose which api to get something from (doesnt work currently)

--- a/index.html
+++ b/index.html
@@ -55,12 +55,18 @@
             <a href="#projects" id="scroll-down-links" class="scroll-down-button">Go Down</a>
         </div>
     </section>
-    <section id="chuck-joke-section">
-        <div id="chuck-joke-container">
-            <label id="chuck-heading">Random Chuck Norris joke for funsies and learning how to make API Requests:</label>
+    <section id="api-section">
+        <div id="api-container">
+            <label id="api-heading">Random Chuck Norris joke for funsies and learning how to make API Requests:</label>
             <br>
-            <label id="chuck-joke"></label>
+            <label id="api"></label>
         </div>
+        <button class="api-select-button" id="api01select-button" onclick="randomJoke()">Random Joke</button>
+        <button class="api-select-button" id="api02select-button">Chuck Norris Joke</button>
+        <button class="api-select-button" id="api03select-button" onclick="numberFact()">Number Fact</button>
+        <button class="api-select-button" id="api04select-button">Random Advice</button>
+        <button class="api-select-button" id="api05select-button">Random Free Activity</button>
+        <button class="api-select-button" id="api06select-button">Random Trivia Action</button>
     </section>
     <section id="projects">
         <div id="projects-timeline"></div>
