mostly fixed api selection fixed typo

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <label id="api"></label>
         </div>
         <button class="api-select-button" id="api01select-button" onclick="randomJoke()">Random Joke</button>
-        <button class="api-select-button" id="api02select-button">Chuck Norris Joke</button>
+        <button class="api-select-button" id="api02select-button" onclick="chuckJoke()">Chuck Norris Joke</button>
         <button class="api-select-button" id="api03select-button" onclick="numberFact()">Number Fact</button>
-        <button class="api-select-button" id="api04select-button">Random Advice</button>
+        <button class="api-select-button" id="api04select-button" onclick="randomAdvice()">Random Advice</button>
         <button class="api-select-button" id="api05select-button">Random Free Activity</button>
-        <button class="api-select-button" id="api06select-button">Random Trivia Action</button>
+        <button class="api-select-button" id="api06select-button">Random Trivia question</button>
     </section>
     <section id="projects">
         <div id="projects-timeline"></div>
