--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
                 </div>
             </div>
         </a>
+        <a href="https://github.com/TheBaum123/todo-app-vanilla-js" class="project-link" id="project-05-link">
+            <div class="project-container" id="project-06-container">
+                <div class="project-title" id="project-06-title">
+                    <label class="project-title-label" id="project-06-title-label">todo-app-vanilla-js</label>
+                </div>
+                <div class="poject-description" id="project-06-description">
+                    <label class="project-description-label" id="project-06-description-label">simple, minimal todo app made in vanilla javascript</label>
+                </div>
+            </div>
+        </a>
     </section>
     <section id="about">
         <div id="storedCookiesContainer">
