--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The_Baum's personal Website</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/section0.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
+    <nav id="nav-bar">
+        <a href="#0" id="section1link" class="link">Start</a>
+        <a href="#1" id="section2link" class="link">Links</a>
+        <a href="#2" id="section3link" class="link">Section 3</a>
+        <a href="#3" id="section4link" class="link">Section 4</a>
+        <a href="#4" id="section5link" class="link">Section 5</a>
+    </nav>
+
     <section id="section0" class="sections" style="z-index: 10;">
         <div id="greetings-container">
             <label>Hello,</label>
@@ -38,6 +44,6 @@
     
     </section>
 
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
