added button to go to the next page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
+    <button id="next-button" onclick="nextSection()">↓</button>
     <nav id="nav-bar">
         <a href="#0" id="section1link" class="link">Start</a>
         <a href="#1" id="section2link" class="link">Links</a>
@@ -29,7 +30,6 @@
     </section>
 
     <section id="section1" class="sections" style="z-index: 1;">
-    
     </section>
 
     <section id="section2" class="sections" style="z-index: 1;">
