added my projects fetched from the github api

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#0" id="section1link" class="link">Start</a>
         <a href="#1" id="section2link" class="link">Links</a>
         <a href="#2" id="section3link" class="link">Contact</a>
-        <a href="#3" id="section4link" class="link">Section 4</a>
+        <a href="#3" id="section4link" class="link">Projects</a>
     </nav>
 
     <section id="section0" class="sections" style="z-index: 10;">
@@ -51,7 +51,7 @@
     </section>
 
     <section id="section3" class="sections" style="z-index: 1;">
-    
+        <div id="projects-container"></div>
     </section>
 
     <script src="scripts/main.js"></script>
