added under construction footer

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <div id="projects-container"></div>
     </section>
 
+    <footer>
+        <span>🛠️ site under construction 🛠️</span>
+    </footer>
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
