add more emojis to under construction footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <footer>
-        <span>🛠️ site under construction 🛠️</span>
+        <span>🚧🛠️🏗️ site under construction 🏗️🛠️🚧</span>
     </footer>
 
     <script src="scripts/main.js"></script>
