add div for progress bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <button id="next-button" onclick="nextSection()">↓</button>
+    <div id="progress-bar"></div>
     <nav id="nav-bar">
         <a href="#0" id="section1link" class="link">Start</a>
         <a href="#1" id="section2link" class="link">Links</a>
