add as many projects as the users screen fits

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </section>
 
     <section id="section3" class="sections" style="z-index: 1;">
-        <div id="projects-container"></div>
+        <div id="project-wrapper">
+            <div id="projects-container"></div>
+        </div>
     </section>
 
     <footer>
