add chatroom an populate links

--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
 
     <section id="section1" class="sections" style="z-index: 1;">
         <div id="link-container">
-            <a href="">
+            <a href="https://github.com/TheBaum123" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="">
+            <a href="https://www.youtube.com/channel/UCvKre5GLBJHx5u3DgcW3Y_A" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
-            <a href="">
+            <a href="https://twitter.com/the_baum123" target="_blank">
                 <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a href="https://chat-app-6bnk.onrender.com/" target="_blank">
+                <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
             </a>
         </div>
     </section>
