projects section, bugfixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/navigation.css">
     <link rel="stylesheet" href="style/variables.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <div id="page-wrapper">
         <header>
             <div id="header-wrapper">
-                <img class="header-item profile-picture header-image" src="favicon.ico" alt="TheBaum's profile picture">
+                <img class="header-item profile-picture header-image" src="images/favicon.ico" alt="TheBaum's profile picture">
                 <nav id="header-nav" class="header-nav header-links">
                     <a class="header-item header-link" href="#about">About</a>
                     <a class="header-item header-link" href="#projects">Projects</a>
@@ -42,6 +42,9 @@
                         hardware and software level.
                     </p>
                 </article>
+            </section>
+            <section class="section projects-section" id="projects">
+                <div class="projects-list" id="projects-list"></div>
             </section>
         </main>
         <footer></footer>
